--- a/src/main/java/Dialog.form
+++ b/src/main/java/Dialog.form
@@ -57,16 +57,6 @@
         <properties/>
         <border type="none"/>
         <children>
-          <component id="6638e" class="javax.swing.JTextField" binding="testTextField" default-binding="true">
-            <constraints>
-              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="-1"/>
-              </grid>
-            </constraints>
-            <properties>
-              <text value=""/>
-            </properties>
-          </component>
           <component id="fbaa4" class="javax.swing.JLabel">
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
@@ -74,6 +64,12 @@
             <properties>
               <text value="output root path"/>
             </properties>
+          </component>
+          <component id="5f6e9" class="com.intellij.openapi.ui.TextFieldWithBrowseButton" binding="textFieldWithBrowseButton" custom-create="true">
+            <constraints>
+              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties/>
           </component>
         </children>
       </grid>
